force-app/main/default/objects/Integration_Health_Event__e/Integration_Health_Event__e.object-meta.xml
<CustomObject>
    <label>Integration Health Event</label>
    <pluralLabel>Integration Health Events</pluralLabel>
</CustomObject>