force-app/main/default/objects/Integration_Health_Event__e/fields/Integration_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log_Id__c</fullName>
    <label>Integration Log Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>